# raftKv

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: bench-nightly.yml  chaos-nightly.yml  ci.yml
deploy/: test.conf.fixed
docs/: chaos-testing.md  一致性读流程.md  目录导览.md  项目架构说明.html
example/: CMakeLists.txt
example/raftCoreExample/: CMakeLists.txt  raftKvDB.cpp
scripts/: bench_ci.sh  bench_nightly.sh  build.sh  chaos_runner.sh  check_cluster.sh  clean.sh  cluster_down.sh  cluster_start.sh  cluster_stop.sh  cluster_up.sh  common.sh  consistency_check.sh  diagnose_cluster.sh  fault_inject.sh  fault_kill_one.sh  net_partition_2_1.sh  perf_flamegraph.sh  run_fault_network.sh  run_perf_flamegraph.sh  run_raft_correctness.sh  run_snapshot_suite.sh  smoke.sh  smoke_chaos.sh  wait_ready.sh  workload_bench.sh
src/: CMakeLists.txt
src/common/: node_config.cpp
src/common/include/: config.h  grpc_log_util.h  node_config.h
src/raftClerk/: clerk.cpp  clerk_policy.cpp  raftServerRpcUtil.cpp
src/raftClerk/include/: clerk.h  clerk_policy.h  raftServerRpcUtil.h
src/raftCore/: Persister.cpp  kvServer.cpp  raft.cpp  raftRpcUtil.cpp
src/raftCore/include/: kvServer.h  raft.h  raftRpcUtil.h
src/raftRpcPro/: CMakeLists.txt  kvServerRPC.proto  raftRPC.proto
src/skipList/include/: skipList.h
test/: CMakeLists.txt  kv_bench.cpp  kv_consistency.cpp
test/unit/: CMakeLists.txt  clerk_policy_test.cpp  kv_read_wait_test.cpp  op_test.cpp  persister_test.cpp  raft_apply_path_test.cpp  skip_list_test.cpp
